# api/openapi.yaml
@@ -767,7 +767,21 @@ components:
             name:
               type: string
               description: VM name within the Pod
+            network:
+              $ref: '#/components/schemas/PodNetwork'
         - $ref: '#/components/schemas/VMSpec'
+    PodNetwork:
+      title: Pod Network Policy
+      type: object
+      properties:
+        allow:
+          type: array
+          items:
+            type: string
+        block:
+          type: array
+          items:
+            type: string
     PodState:
       title: Pod State
       type: object
